[gd_scene load_steps=4 format=3 uid="uid://brvmcx2ivldxr"]

[ext_resource type="Theme" uid="uid://dx1nvrgj4elv1" path="res://Resources/UI/Themes/menu_theme.tres" id="1_stc8i"]
[ext_resource type="Script" path="res://Scripts/UI/Menu/MainMenuUI.gd" id="2_4lhbl"]
[ext_resource type="LabelSettings" uid="uid://dhh5hwtmwc0k3" path="res://Resources/UI/menu_label_settings.tres" id="2_ktjcy"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_stc8i")
script = ExtResource("2_4lhbl")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_stc8i")

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_stc8i")

[node name="Panel" type="PanelContainer" parent="HSplitContainer/MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(360, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_stc8i")

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/MarginContainer/CenterContainer/Panel"]
layout_mode = 2
theme = ExtResource("1_stc8i")
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/MarginContainer/CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_stc8i")
alignment = 1

[node name="GameTitle" type="Label" parent="HSplitContainer/MarginContainer/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_stc8i")
text = "main_menu_game_title"
label_settings = ExtResource("2_ktjcy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control3" type="Control" parent="HSplitContainer/MarginContainer/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_stc8i")

[node name="StartButton" type="Button" parent="HSplitContainer/MarginContainer/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_stc8i")
text = "main_menu_start_game_btn"

[node name="ConfigButton" type="Button" parent="HSplitContainer/MarginContainer/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_stc8i")
text = "main_menu_configuration_btn"

[node name="CreditsButton" type="Button" parent="HSplitContainer/MarginContainer/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_stc8i")
text = "main_menu_credit_btn"

[node name="ExitButton" type="Button" parent="HSplitContainer/MarginContainer/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_stc8i")
text = "main_menu_exit_btn"

[node name="Control2" type="Control" parent="HSplitContainer/MarginContainer/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_stc8i")

[node name="Control" type="Control" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
